--- a/omos.html
+++ b/omos.html
@@ -1,119 +1,162 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Skabelon</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="stylesheet.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-  
-      <!--Google Fonts: Fuzzy Bubbles til H1,H2-->
-      <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap" rel="stylesheet">
-      <!--Google Fonts: Poppins til <p>-->
-      <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-  
-  </head>
-  
-  <body>
-    <!--NAVIGATIONSBAR-->
-<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top px-md-4">
-  <div class="container-fluid">
-    <a class="navbar-brand logo" href="index.html"><img src="img/logo.png" alt="logo skål"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
 
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        
-        <!-- DROPDOWN MENU -->
-        <li class="nav-item dropdown vores-dropdown">
-          <a class="nav-link dropbtn dropdown-toggle" href="alleopskrifter.html">Opskrifter</a>
-          <div class="dropdown-content">
-            <a href="sommer.html">Sommer</a>
-            <a href="efteraar.html">Efterår</a>
-            <a href="vinter.html">Vinter</a>
-            <a href="foraar.html">Forår</a>
-          </div>
-        </li>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Om Os</title>
 
-        <li class="nav-item">
-          <a class="nav-link" href="faellesskaal.html">Fælles-skål</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="omos.html">Om Os</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="kontakt.html">Kontakt</a>
-        </li>
-      </ul>
+  <!--Bootstrap CSS-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  <!--Eget ekstern stylesheet-->
+  <link rel="stylesheet" href="stylesheet.css">
+
+  <!--Bootstrap ikoner-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+
+
+  <!--Google Fonts-->
+  <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+</head>
+
+<body>
+
+  <!-- ===========================
+       NAVIGATIONSBAR
+       =========================== -->
+  <!--Fixed navbar-->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top px-md-4">
+    <div class="container-fluid">
+      <a class="navbar-brand logo" href="index.html"><img src="img/logo.png" alt="logo skål"></a>
+
+      <!--Burger-menu til mobil-->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!--Links i navbar-->
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+
+          <!-- Custom dropdown-menu til sæsoner-->
+          <li class="nav-item dropdown vores-dropdown">
+            <a class="nav-link dropbtn dropdown-toggle" href="alleopskrifter.html">Opskrifter</a>
+            <div class="dropdown-content">
+              <a href="sommer.html">Sommer</a>
+              <a href="efteraar.html">Efterår</a>
+              <a href="vinter.html">Vinter</a>
+              <a href="foraar.html">Forår</a>
+            </div>
+          </li>
+
+          <!--Andre links-->
+          <li class="nav-item">
+            <a class="nav-link" href="faellesskaal.html">Fælles-skål</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="omos.html">Om Os</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="kontakt.html">Kontakt</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
+  <!-- ===========================
+       FØRSTE DEL M. AMALIE & LÆRKE - DET STARTER I KØKKENET
+       =========================== -->
+  <div class="custom-container my-5">
+    <h1>Om Os</h1>
+  </div>
+
+  <div class="custom-container">
+    <div class="row align-items-start my-1">
+      <!-- Kolonne: 12 på mobil, 6 på medium skærme (≥768px) og op -->
+      <div class="col-12 col-md-6">
+
+        <!--Billede af Amalie og Lærke-->
+        <img class="kokke" src="img/omos/kokke1.png" alt="">
+      </div>
+
+      <!-- Kolonne: 12 på mobil, 6 på medium skærme (≥768px) og op -->
+      <div class="col-12 col-md-6 my-5">
+        <!--Tekst om kokke-->
+        <h2>Det starter i køkkenet...</h2>
+        <p>I køkkenet finder du vores to passionerede kokke - Amalie til venstre og Lærke til højre - som elsker at
+          nørde smage, skrælle kartofler i godt selskab og trylle med sæsonens friske råvarer. Det er dem, der står bag
+          de opskrifter, du finder her på siden. Opskrifterne er enkle, ærlige og skabt med masser af kærlighed til
+          hjemmelavet mad. <br> For Amalie og Lærke handler det ikke om det perfekte billede til sociale medier, men om
+          duften i køkkenet, smagen af noget godt - og glæden ved at skabe mad fra bunden, der samler folk omkring
+          bordet.</p>
+        <img class="madlavning d-none d-lg-block" src="img/omos/amalieoglaerkekoekkenet.png" alt="">
+      </div>
     </div>
   </div>
-</nav>
 
 
+  <!-- ===========================
+       ANDEN DEL M. KATRINE & MARIE - ...OG SAMLER SIG I ET FÆLLES MADUNIVERS
+       =========================== -->
+  <div class="custom-container my-2">
+    <div class="row align-items-start">
+      <!-- Kolonne: 12 på mobil, 6 på medium skærme (≥768px) og op -->
+       <!--Rækkefølge: 2 på mobil, 2 på medium skærme og op-->
+      <div class="col-12 col-md-6 order-2 order-md-1">
+        <!--Tekst om 'bag' website hold-->
+        <h2>...og samler sig i et fælles madunivers</h2>
+        <p>Bag skærmen finder du Katrine til venstre og Marie til højre - to kreative kræfter, der sammen står for alt
+          det, du ser og læser her på siden. De udvikler idéerne, former indholdet og skaber det visuelle udtryk, der
+          binder hele maduniverset sammen. <br><br> Sammen med Amalie og Lærke i køkkenet arbejder vi på at skabe et
+          sted med plads til alle - hvor fællesskab, nærvær og kærligheden til sæsonens råvarer er i centrum. Her
+          handler det om mere end mad - det handler om stemning, inspiration og glæden ved at skabe noget sammen.
+        </p>
+      </div>
 
-<div class="custom-container my-5">
-  <h1>Om Os</h1>
-</div>
-
-<!--Første del m. Amalie og Lærke / kokke-->
-<div class="custom-container">
-  <div class="row align-items-start my-1">
-    <div class="col-12 col-md-6">
-      <!--Billede af Amalie og Lærke-->
-      <img class="kokke" src="img/omos/kokke1.png" alt="">
-    </div>
-    <div class="col-12 col-md-6 my-5">
-      <!--Tekst om kokke-->
-      <h2>Det starter i køkkenet...</h2>
-      <p>I køkkenet finder du vores to passionerede kokke - Amalie til venstre og Lærke til højre - som elsker at nørde smage, skrælle kartofler i godt selskab og trylle med sæsonens friske råvarer. Det er dem, der står bag de opskrifter, du finder her på siden. Opskrifterne er enkle, ærlige og skabt med masser af kærlighed til hjemmelavet mad. <br> For Amalie og Lærke handler det ikke om det perfekte billede til sociale medier, men om duften i køkkenet, smagen af noget godt - og glæden ved at skabe mad fra bunden, der samler folk omkring bordet.</p>
-      <img class="madlavning d-none d-lg-block" src="img/omos/amalieoglaerkekoekkenet.png" class="" alt="">
-    </div>
-  </div>
-</div>
-
-
-<!--Anden del - Katrine og Marie / website mv.-->
-<div class="custom-container my-2">
-  <div class="row align-items-start">
-    <!--Order: så der ved mobilverison er en anden rækkefølge. Tekst+billede og tekst+billede-->
-    <div class="col-12 col-md-6 order-2 order-md-1">
-      <!--Tekst om 'bag' website hold-->
-      <h2>...og samler sig i et fælles madunivers</h2>
-      <p>Bag skærmen finder du Katrine til venstre og Marie til højre - to kreative kræfter, der sammen står for alt det, du ser og læser her på siden. De udvikler idéerne, former indholdet og skaber det visuelle udtryk, der binder hele maduniverset sammen. <br><br> Sammen med Amalie og Lærke i køkkenet arbejder vi på at skabe et sted med plads til alle - hvor fællesskab, nærvær og kærligheden til sæsonens råvarer er i centrum. Her handler det om mere end mad - det handler om stemning, inspiration og glæden ved at skabe noget sammen.
-      </p>
-    </div>
-    <!--Order: så der ved mobilverison er en anden rækkefølge. Tekst+billede og tekst+billede-->
-    <div class="col-12 col-md-6 order-1 order-md-1 ">
-      <!--Billede af Katrine og Marie-->
-      <img class="teknik" src="img/omos/teknik1.png" alt="">
+      <!-- Kolonne: 12 på mobil, 6 på medium skærme (≥768px) og op -->
+      <!--Rækkefølge: 1 på mobil, 2 på medium skærme og op-->
+      <div class="col-12 col-md-6 order-1 order-md-2">
+        <!--Billede af Katrine og Marie-->
+        <img class="teknik" src="img/omos/teknik1.png" alt="">
+      </div>
     </div>
   </div>
-</div>
 
 
-<div class="custom-container text-center">
-  <div class="row align-items-start">
-    <div class="col-6 col-md-5 offset-md-1">
-      <img src="img/omos/paastranden1.png" alt="">
-    </div>
-    <div class="col-6 col-md-4 hugo">
-      <img src="img/omos/hugooglaerke.png" alt="">
+    <!-- ===========================
+       BILLEDECOLLAGE AF STRAND OG LÆRKE M. HUND
+       =========================== -->
+  <div class="custom-container text-center">
+    <div class="row align-items-start">
+      <!-- Kolonne: 6 på mobil, 5 på medium skærme (≥768px) og op-->
+      <!--Offset: 1 kol på medium skærme og op-->
+      <div class="col-6 col-md-5 offset-md-1">
+        <img src="img/omos/paastranden1.png" alt="">
+      </div>
+
+      <!-- Kolonne: 6 på mobil, 4 på medium skærme (≥768px) og op-->
+      <div class="col-6 col-md-4">
+        <img class="hugo" src="img/omos/hugooglaerke.png" alt="">
+      </div>
     </div>
   </div>
-</div>
 
-<!--FÆLLESSKAB-AFSNIT-->
-<section class="container-fluid orange position-relative faelles-bord">
-  <a href="faellesskaal.html">
-        <picture class="d-flex justify-content-center">
+    <!-- ===========================
+       FÆLLESSKAB SOM LINKER TIL FÆLLES-SKÅL SIDE
+       =========================== -->
+  <div class="container-fluid orange position-relative faelles-bord">
+    <a href="faellesskaal.html">
+      <picture class="d-flex justify-content-center">
         <source media="(min-width: 768px)" srcset="img/deskfaellesskaal.png">
         <img src="img/mobilfaellesskaal.png" alt="">
-    </picture>
-  </a>
-</section>
+      </picture>
+    </a>
+  </div>
 
 
 
@@ -173,7 +216,12 @@
   </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-     <script src="script.js"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+    crossorigin="anonymous"></script>
+
+  <!--JavaScript benyttes til at navigationsbar: nuværende sæson øverst ved dropdown menu-->
+  <script src="script.js"></script>
+</body>
+
 </html>
