--- a/sommer.html
+++ b/sommer.html
@@ -2,100 +2,142 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sommer</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="stylesheet.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Sommer Opskrifter</title>
 
-    <!--Google Fonts: Fuzzy Bubbles til H1,H2-->
-    <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap" rel="stylesheet">
-    <!--Google Fonts: Poppins til <p>-->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <!--Bootstrap CSS-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  <!--Eget ekstern stylesheet-->
+  <link rel="stylesheet" href="stylesheet.css">
 
+  <!--Bootstrap ikoner-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+
+
+  <!--Google Fonts-->
+  <link href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <!--NAVIGATIONSBAR-->
-<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top px-md-4">
-  <div class="container-fluid">
-    <a class="navbar-brand logo" href="index.html"><img src="img/logo.png" alt="logo skål"></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
 
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        
-        <!-- DROPDOWN MENU -->
-        <li class="nav-item dropdown vores-dropdown">
-          <a class="nav-link dropbtn dropdown-toggle" href="alleopskrifter.html">Opskrifter</a>
-          <div class="dropdown-content">
-            <a href="sommer.html">Sommer</a>
-            <a href="efteraar.html">Efterår</a>
-            <a href="vinter.html">Vinter</a>
-            <a href="foraar.html">Forår</a>
-          </div>
-        </li>
+  <!-- ===========================
+       NAVIGATIONSBAR
+       =========================== -->
+  <!--Fixed navbar-->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top px-md-4">
+    <div class="container-fluid">
+      <a class="navbar-brand logo" href="index.html"><img src="img/logo.png" alt="logo skål"></a>
 
-        <li class="nav-item">
-          <a class="nav-link" href="faellesskaal.html">Fælles-skål</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="omos.html">Om Os</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="kontakt.html">Kontakt</a>
-        </li>
-      </ul>
+      <!--Burger-menu til mobil-->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!--Links i navbar-->
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+
+          <!-- Custom dropdown-menu til sæsoner-->
+          <li class="nav-item dropdown vores-dropdown">
+            <a class="nav-link dropbtn dropdown-toggle" href="alleopskrifter.html">Opskrifter</a>
+            <div class="dropdown-content">
+              <a href="sommer.html">Sommer</a>
+              <a href="efteraar.html">Efterår</a>
+              <a href="vinter.html">Vinter</a>
+              <a href="foraar.html">Forår</a>
+            </div>
+          </li>
+
+          <!--Andre links-->
+          <li class="nav-item">
+            <a class="nav-link" href="faellesskaal.html">Fælles-skål</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="omos.html">Om Os</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="kontakt.html">Kontakt</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+
+  <!-- ===========================
+       INTRO-SEKTION
+       =========================== -->
+  <div class="custom-container">
+    <div class="row align-items-start my-5">
+      <!--Tekstfelt til venstre-->
+      <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
+      <div class="col-12 col-sm-7">
+        <h1>Sommer</h1>
+        <p>Sommermånederne inviterer til madlavning i alle tempoer - hvad enten du laver noget simpelt til dig selv
+          efter en lang dag, eller inviterer vennerne til aftensmad i gården eller parken. Maden må gerne være nem,
+          frisk og fuld af farver.
+        </p>
+      </div>
+
+      <!--Illustration til højre-->
+      <!--Illustration vises ikke på mobil-->
+      <!--Kolonne: 3 kol på små skærme (576px) og op + forskydes 1 kol efter medium skærm (768px)-->
+      <div class="d-none d-sm-block col-sm-3 offset-md-1">
+        <img src="img/illustrationer/jordbaer.png" alt="illustration">
+      </div>
     </div>
   </div>
-</nav>
 
-    <!--INTRODUKTIONS-AFSNIT-->
-    <div class="custom-container">
-        <div class="row align-items-start my-5">
-            <!--Tekstfelt m. introduktion til side-->
-            <!--Tekst skal fylde 12 kol. på mobil og op efter 6 kol. -->
-            <div class="col-12 col-sm-7">
-                <h1>Sommer</h1>
-                <p>Sommermånederne inviterer til madlavning i alle tempoer - hvad enten du laver noget simpelt til dig selv efter en lang dag, eller inviterer vennerne til aftensmad i gården eller parken. Maden må gerne være nem, frisk og fuld af farver.
-                </p>
-            </div>
-            <!--Illustration til højre-->
-            <!--Illustration skal ikke vises på mobil. Op efter fylder den 2 kol. og har 2 tomme kol. til venstre-->
-            <div class="d-none d-sm-block col-sm-3 offset-md-1">
-                <img src="img/illustrationer/jordbaer.png" alt="illustration">
-            </div>
+
+  <!-- ===========================
+       3 OPSKRIFTER
+       =========================== -->
+  <!--Introduktion til de 3 opskrifter-->
+  <!--Orange baggrund-->
+  <div class="orange">
+    <div class="custom-container py-5">
+      <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
+      <div class="col-12 py-4 col-lg-6">
+        <h2>Smagen af Sol og Sommer</h2>
+        <p>Her finder du opskrifter med alt det bedste fra sommerens køkken – som squash, jordbær, ærter og spidskål.
+          Retter, der smager af feriefornemmelser, kolde drikke og aftener, der strækker sig lidt længere end resten af
+          året.
+        </p>
+      </div>
+
+      <!--3 opskrifter m.billede og tekst-->
+      <div class="alle-sommer row align-items-start">
+        <!--Opskrift 1-->
+        <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
+        <div class="col-12 col-sm-4 py-3">
+          <a href="sommer1.html"><img src="img/sommer/sommer1billede1.png" alt=""></a>
+          <a href="sommer1.html">
+            <h3>Sommersalat med jordbær, burrata og nem focaccia</h3>
+          </a>
         </div>
-    </div>
-
-    <!-- Smagen af Sol og Sommer - orange container -->
-        <div class="orange">
-        <div class="custom-container py-5">
-            <div class="col-12 py-4 col-lg-6">
-                <h2>Smagen af Sol og Sommer</h2>
-                <p>Her finder du opskrifter med alt det bedste fra sommerens køkken – som squash, jordbær, ærter og spidskål. Retter, der smager af feriefornemmelser, kolde drikke og aftener, der strækker sig lidt længere end resten af året.
-                </p>
-            </div>
-        <div class="alle-sommer row align-items-start">
-            <div class="col-12 col-sm-4 py-3">
-              <a href="sommer1.html"><img src="img/sommer/sommer1billede1.png" alt=""></a>
-              <a href="sommer1.html"><h3>Sommersalat med jordbær, burrata og nem focaccia</h3></a>
-            </div>
-            <div class="col-12 col-sm-4 py-3">
-              <a href="sommer2.html"><img src="img/sommer1.png" alt=""></a>
-              <a href="sommer2.html"><h3>Sommer-tacos med ærtemos og grillede grøntsager</h3></a>
-            </div>
+        <!--Opskrift 2-->
+        <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
+        <div class="col-12 col-sm-4 py-3">
+          <a href="sommer2.html"><img src="img/sommer1.png" alt=""></a>
+          <a href="sommer2.html">
+            <h3>Sommer-tacos med ærtemos og grillede grøntsager</h3>
+          </a>
+        </div>
+        <!--Opskrift 3-->
+        <!-- Kolonne: 12 på mobil, 7 på små skærme (576px) og op -->
         <div class="col-12 col-sm-4 py-3">
           <a href="sommer3.html"><img src="img/sommer/sommer3billede1.png" alt=""></a>
-          <a href="sommer3.html"><h3>Sommerpizza med sæsonens grønt og sprød bund</h3></a>
+          <a href="sommer3.html">
+            <h3>Sommerpizza med sæsonens grønt og sprød bund</h3>
+          </a>
         </div>
-        </div>
+      </div>
     </div>
-    </div>
+  </div>
 
 
   <!-- ===========================
@@ -153,10 +195,12 @@
   </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-        crossorigin="anonymous"></script>
-     <script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+    crossorigin="anonymous"></script>
+
+  <!--JavaScript benyttes til at navigationsbar: nuværende sæson øverst ved dropdown menu-->
+  <script src="script.js"></script>
 </body>
 
 </html>
